# HR-Candidate-Screening

./: README.md
backend/: .gitignore  package-lock.json  pyproject.toml
backend/app/: main.py
backend/app/agent_tools/: candidate_assessment_tool.py  candidate_report_tool.py  candidate_world_check_tool.py  cv_scoring_tool.py  determine_job_posting.py  document_extraction_tool.py  interview_questions_tool.py  project_contribution_tool.py  social_media_screening_tool.py  validate_questions_tool.py
backend/app/agents/: cv_agent_wrapper.py
backend/app/database/: db.py
backend/app/document_extraction/: document_extractor.py
backend/app/knowledge_base/scoring_process/: candidate_assessment_template.txt  candidate_report_template.txt  cv_scoring_template.txt  interview_questions_template.txt  job_description.txt  project_contribution_template.txt  regenerate_interview_questions_template.txt  social_media_scoring_template.txt  user_message.txt  (+1 more)
backend/app/llm_handler/: embedder.py  llm_handler.py
backend/app/models/: candidate_assessment.py  candidate_info.py  candidate_report.py  extraction_info.py  graph_state.py  interview_questions.py  job_description.py  project_info.py  score_result.py  social_media_score.py  world_check.py
backend/app/nodes/: candidate_assessment_score_node.py  candidate_report_node.py  candidate_world_check_node.py  cv_scoring_node.py  document_extraction_node.py  error_handler_node.py  interview_questions_node.py  job_posting_determination_node.py  project_contribution_node.py  social_media_screening_node.py
backend/app/workflow/: langgraph_workflow.py
(+48 files in other folders)
